--- a/templates/user.xml
+++ b/templates/user.xml
@@ -113,7 +113,7 @@
       <option name="TS_TOP_LEVEL_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="a-routing-module" value="import { NgModule } from '@angular/core';&#10;import { Routes, RouterModule } from '@angular/router';&#10;&#10;import { $NAME$ListComponent } from './list/$dashlowerNAME$-list.component';&#10;&#10;const routes: Routes = [&#10;  {&#10;    path: '',&#10;    pathMatch: 'full',&#10;    component: $NAME$ListComponent&#10;  }&#10;];&#10;&#10;@NgModule({&#10;  imports: [RouterModule.forChild(routes)],&#10;  exports: [RouterModule]&#10;})&#10;export class $NAME$sRoutingModule { }" description="create routing module" toReformat="true" toShortenFQNames="true">
+  <template name="a-routing-module-list" value="import { NgModule } from '@angular/core';&#10;import { Routes, RouterModule } from '@angular/router';&#10;&#10;import { $NAME$ListComponent } from './list/$dashlowerNAME$-list.component';&#10;&#10;const routes: Routes = [&#10;  {&#10;    path: '',&#10;    pathMatch: 'full',&#10;    component: $NAME$ListComponent&#10;  }&#10;];&#10;&#10;@NgModule({&#10;  imports: [RouterModule.forChild(routes)],&#10;  exports: [RouterModule]&#10;})&#10;export class $NAME$RoutingModule { }" description="create routing module for list" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="dashlowerNAME" expression="lowercaseAndDash(NAME)" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -136,6 +136,17 @@
   </template>
   <template name="a-module-feature-list" value="const externalModules = [];&#10;const internalUIModules = [];&#10;const internalModules = [];&#10;const components = [$name$ListComponent]&#10;&#10;@NgModule({&#10;  declarations: [&#10;    ...components&#10;  ],&#10;  imports: [&#10;    SharedModule,&#10;    $name$RoutingModule,&#10;&#10;    ...internalModules,&#10;    ...internalUIModules,&#10;    ...externalModules&#10;  ],&#10;  providers: [$name$sFacade, $name$MapperService, DataServiceProviderApiIsNotAvailableYet]&#10;})&#10;export class $name$sModule {&#10;}" description="angular feature module with routing" toReformat="true" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JS_STATEMENT" value="true" />
+      <option name="JS_TOP_LEVEL_STATEMENT" value="true" />
+      <option name="TS_STATEMENT" value="true" />
+      <option name="TS_TOP_LEVEL_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="a-service-facade" value="import { Inject, Injectable } from '@angular/core';&#10;&#10;import { DataBaseService, Facade$Type$ } from '@admin/shared';&#10;import { DataBaseGenericService } from '../../../../shared';&#10;&#10;import { $Name$ } from '../entity/$dashLowerName$';&#10;&#10;&#10;@Injectable()&#10;export class $Name$Facade extends Facade$Type$&lt;$Name$&gt; {&#10;  constructor(@Inject(DataBaseService) protected dataService: DataBaseGenericService&lt;$Name$&gt;) {&#10;    super(dataService);&#10;    super.updateFilterFields(&#10;      { name: 'id', searchType: 'eqNumber' },&#10;      { name: 'nameGeo', searchType: 'contains' },&#10;      { name: 'nameEng', searchType: 'contains' }&#10;    );&#10;    super.updatePath($Name$);&#10;    super.completeInit();&#10;  }&#10;}" description="create facade service" toReformat="true" toShortenFQNames="true">
+    <variable name="Name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="dashLowerName" expression="lowercaseAndDash(Name)" defaultValue="" alwaysStopAt="false" />
+    <variable name="Type" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JS_STATEMENT" value="true" />
       <option name="JS_TOP_LEVEL_STATEMENT" value="true" />
