--- a/templates/user.xml
+++ b/templates/user.xml
@@ -163,7 +163,7 @@
       <option name="TS_CLASS" value="true" />
     </context>
   </template>
-  <template name="a-html-input" value="&lt;kendo-textbox-container&#10;  [style.width]=&quot;'100%'&quot;&#10;  floatingLabel='$name$'&gt;&#10;  &lt;input kendoTextBox&#10;         [formControl]='control' /&gt;&#10;&lt;/kendo-textbox-container&gt;" toReformat="true" toShortenFQNames="true">
+  <template name="a-html-input" value="&lt;kendo-textbox-container&#10;  [style.width]=&quot;'100%'&quot;&#10;  floatingLabel='$name$'&gt;&#10;  &lt;input kendoTextBox&#10;         [formControl]='control' /&gt;&#10;&lt;/kendo-textbox-container&gt;" description="" toReformat="true" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="HTML_TEXT" value="true" />
